--- a/SteamInstaller/SteamInstaller.csproj
+++ b/SteamInstaller/SteamInstaller.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0;net5.0;netcoreapp3.1</TargetFramework>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>L. Gmann</Copyright>
     <RepositoryUrl>https://github.com/First-Coder/SpawnCodeGenerator</RepositoryUrl>
