--- a/SteamInstaller/SteamInstaller.csproj
+++ b/SteamInstaller/SteamInstaller.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0;net5.0;netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>net6.0;net5.0;netcoreapp3.1</TargetFrameworks>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>L. Gmann</Copyright>
     <RepositoryUrl>https://github.com/First-Coder/SpawnCodeGenerator</RepositoryUrl>
